fix: #1, font size of word meaning too big

--- a/FR Word mining (type in)/Styling.css
+++ b/FR Word mining (type in)/Styling.css
@@ -1,6 +1,6 @@
 .card {
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Noto Sans JP", Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", "MS UI Gothic", sans-serif;
-    font-size: 44px;
+    font-size: 20px;
     text-align: center;
    }
    
